solves jdk 24 startup warning